--- a/index.html
+++ b/index.html
@@ -3,15 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img src="./images/header-image.png" alt="Картинка" class="main-illustration">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="block block_key_value">
+      <div class="header__square-pic"></div>
+      <h1 class=header__title>Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</h2>
+      <a href="#" class="header__link header__link_active">Узнать &#8594;</a>
     </header>
     <main class="content">
-      <section class="description">
+      <section class="description">       
+        <div class=" flex-row two-columns">
+        <h2 class=two-columns__brief>Главные проблемы в обучении</h2>
+        <div class=two-columns__main-text>
+      <p class=two-columns__paragraph>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+      <p class=two-columns__paragraph>Вывод: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+      <p class=two-columns__paragraph>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      </div>
+      </div>
+
+      </div>  
       </section>
 
       <section class="digits">
