--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </header>
     <main class="content">
       <section class="description">       
-        <div class=" flex-row two-columns">
+        <div class="two-columns">
         <h2 class=two-columns__brief>Главные проблемы в обучении</h2>
         <div class=two-columns__main-text>
-      <p class=two-columns__paragraph>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-      <p class=two-columns__paragraph>Вывод: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-      <p class=two-columns__paragraph>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      <p class=paragraph>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+      <p class=paragraph><span class="letter">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+      <p class=paragraph>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
       </div>
       </div>
 
@@ -32,6 +32,45 @@
       </section>
 
       <section class="digits">
+        <h1 class="section-title">Цифры и факты</h1>
+        <h2 class="section-subtitle">Про учёбу и мозг</h2>
+<div class="table">
+<div class="cell">
+  <h3 class="heading">86 миллиардов</h3>
+  <p class="text">Число нейронов в мозге человека</p>  
+</div>
+<div class="cell">
+  <h3 class="heading">2.1 миллиарда</h3>
+  <p class="text">Число нуждающихся в повышении квалификации</p>  
+  <p class="text-lower">Всемирный Банк, 2017</p>
+</div>
+<div class="cell">
+  <h3 class="heading">1000 терабайт</h3>
+  <p class="text">Объём памяти человека</p>  
+</div>
+<div class="cell">
+  <h3 class="heading">500 триллионов</h3>
+  <p class="text">Число ответственных за обучение нервных синапсов у взрослого человека
+  </p>  
+</div>
+<div class="cell">
+  <h3 class="heading">420 миллионов</h3>
+  <p class="text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> 
+  <p class="text-lower">Всемирный Банк, 2017</p> 
+</div>
+<div class="cell">
+  <h3 class="heading">17–20 лет</h3>
+  <p class="text">Пик обучаемости</p>  
+</div>
+<div class="cell">
+  <h3 class="heading">1885 год</h3>
+  <p class="text">Открытие кривой забывания</p>  
+</div>
+<div class="cell">
+  <h3 class="heading">1889 год</h3>
+  <p class="text">Открытие условного рефлекса</p>  
+</div>
+</div>
       </section>
 
       <section class="feynman">
