--- a/index.html
+++ b/index.html
@@ -7,28 +7,25 @@
   <link rel="stylesheet" href="./styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
     <header class="header">
       <img src="./images/header-image.png" alt="Картинка" class="main-illustration">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="block block_key_value">
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo_place_header">
       <div class="header__square-pic"></div>
-      <h1 class=header__title>Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</h2>
-      <a href="#" class="header__link header__link_active">Узнать &#8594;</a>
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+       <a href="#" class="header__link">  Узнать &#8594;</a></h2>
     </header>
     <main class="content">
       <section class="description">       
         <div class="two-columns">
-        <h2 class=two-columns__brief>Главные проблемы в обучении</h2>
-        <div class=two-columns__main-text>
-      <p class=paragraph>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-      <p class=paragraph><span class="letter">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-      <p class=paragraph>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+        <div class="two-columns__main-text">
+      <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+      <p class="paragraph-conclusion"><span class="letter">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+      <p class="paragraph-conclusion">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
       </div>
-      </div>
-
-      </div>  
+      </div>      
       </section>
 
       <section class="digits">
@@ -74,14 +71,68 @@
       </section>
 
       <section class="feynman">
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>
+        
+         
       </section>
 
       <section class="kaufman">
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+        <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <div class="table">
+          <div class="table__cell_theme_dark">
+          <h3 class="heading">1</h3>
+          <p class="text table__text_theme_dark">Выберите привлекательный проект.</p> 
+        </div>
+        <div class="table__cell_theme_dark">
+          <h3 class="heading">2</h3>
+          <p class="text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+        </div> 
+        <div class="table__cell_theme_dark">
+          <h3 class="heading">3</h3>
+          <p class="text table__text_theme_dark">Определите целевой уровень мастерства.</p> 
+        </div>
+        <div class="table__cell_theme_dark">
+          <h3 class="heading">4</h3>
+          <p class="text table__text_theme_dark">Разбейте навык на элементы.</p> 
+        </div>
+        <div class="table__cell_theme_dark">  
+        <h3 class="heading">5</h3>
+          <p class="text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+        </div> 
+        <div class="table__cell_theme_dark">
+        <h3 class="heading">6</h3>
+          <p class="text table__text_theme_dark">Устраните препятствия для занятий.</p>
+        </div> 
+        <div class="table__cell_theme_dark">
+          <h3 class="heading">7</h3>
+          <p class="text table__text_theme_dark">Выделите специальное время для занятий.</p> 
+        </div> 
+        <div class="table__cell_theme_dark">
+         <h3 class="heading">8</h3>
+          <p class="text table__text_theme_dark">Создайте быстрые петли обратной связи.</p> 
+        </div>
+        <div class="table__cell_theme_dark">
+          <h3 class="heading">9</h3>
+          <p class="text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p> 
+        </div>
+        <div class="table__cell_theme_dark">
+          <h3 class="heading">10</h3>
+          <p class="text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p> 
+        </div> 
+        </div>
+        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
-
-    </footer>
+<div class="columns">
+  <div class="column_content_copyright">
+    <img src="./images/logo_place_header.svg" alt="Логотип" class="logo_place_footer">
   </div>
+</div>
+    </footer>
 </body>
 </html>
