--- a/index.html
+++ b/index.html
@@ -8,64 +8,64 @@
   <title>Научиться учиться</title>
 </head>
 <body class="page">
-    <header class="header">
-      <img src="./images/header-image.png" alt="Картинка" class="main-illustration">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo_place_header">
-      <div class="header__square-pic"></div>
-      <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-       <a href="#" class="header__link">  Узнать &#8594;</a></h2>
-    </header>
-    <main class="content">
-      <section class="description">       
-        <div class="two-columns">
-        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-        <div class="two-columns__main-text">
-      <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-      <p class="paragraph-conclusion"><span class="letter">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-      <p class="paragraph-conclusion">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-      </div>
-      </div>      
-      </section>
+  <header class="header">
+    <img src="./images/header-image.png" alt="Картинка" class="header__main-illustration">
+    <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+    <div class="header__square-pic"></div>
+    <h1 class="header__title">Научиться учиться</h1>
+    <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+    <a href="#" class="header__link">  Узнать &#8594;</a></h2>
+  </header>
+<main class="content">
+  <section class="description">       
+  <div class="two-columns">
+    <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+  <div class="two-columns__main-text">
+      <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+      <p class="two-columns__paragraph-conclusion"><span class="letter">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+      <p class="two-columns__paragraph-conclusion">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+  </div>
+  </div>      
+  </section>
 
       <section class="digits">
         <h1 class="section-title">Цифры и факты</h1>
         <h2 class="section-subtitle">Про учёбу и мозг</h2>
 <div class="table">
-<div class="cell">
-  <h3 class="heading">86 миллиардов</h3>
-  <p class="text">Число нейронов в мозге человека</p>  
+<div class="table__cell">
+  <h3 class="table__heading">86 миллиардов</h3>
+  <p class="table__text">Число нейронов в мозге человека</p>  
 </div>
-<div class="cell">
-  <h3 class="heading">2.1 миллиарда</h3>
-  <p class="text">Число нуждающихся в повышении квалификации</p>  
-  <p class="text-lower">Всемирный Банк, 2017</p>
+<div class="table__cell">
+  <h3 class="table__heading">2.1 миллиарда</h3>
+  <p class="table__text">Число нуждающихся в повышении квалификации</p>  
+  <p class="table__text-lower">Всемирный Банк, 2017</p>
 </div>
-<div class="cell">
-  <h3 class="heading">1000 терабайт</h3>
-  <p class="text">Объём памяти человека</p>  
+<div class="table__cell">
+  <h3 class="table__heading">1000 терабайт</h3>
+  <p class="table__text">Объём памяти человека</p>  
 </div>
-<div class="cell">
-  <h3 class="heading">500 триллионов</h3>
-  <p class="text">Число ответственных за обучение нервных синапсов у взрослого человека
+<div class="table__cell">
+  <h3 class="table__heading">500 триллионов</h3>
+  <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека
   </p>  
 </div>
-<div class="cell">
-  <h3 class="heading">420 миллионов</h3>
-  <p class="text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> 
-  <p class="text-lower">Всемирный Банк, 2017</p> 
+<div class="table__cell">
+  <h3 class="table__heading">420 миллионов</h3>
+  <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p> 
+  <p class="table__text-lower">Всемирный Банк, 2017</p> 
 </div>
-<div class="cell">
-  <h3 class="heading">17–20 лет</h3>
-  <p class="text">Пик обучаемости</p>  
+<div class="table__cell">
+  <h3 class="table__heading">17–20 лет</h3>
+  <p class="table__text">Пик обучаемости</p>  
 </div>
-<div class="cell">
-  <h3 class="heading">1885 год</h3>
-  <p class="text">Открытие кривой забывания</p>  
+<div class="table__cell">
+  <h3 class="table__heading">1885 год</h3>
+  <p class="table__text">Открытие кривой забывания</p>  
 </div>
-<div class="cell">
-  <h3 class="heading">1889 год</h3>
-  <p class="text">Открытие условного рефлекса</p>  
+<div class="table__cell">
+  <h3 class="table__heading">1889 год</h3>
+  <p class="table__text">Открытие условного рефлекса</p>  
 </div>
 </div>
       </section>
@@ -74,65 +74,81 @@
         <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
         <h1 class="feynman__title">Метод Фейнмана</h1>
         <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
-        <a href="#" class="feynman__link">Подробнее &#8594;</a>
-        
-         
+        <a href="#" class="feynman__link">Подробнее &#8594;</a>    
       </section>
 
       <section class="kaufman">
         <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
         <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
-        <div class="table">
+        <div class="table table_theme_dark">
           <div class="table__cell_theme_dark">
-          <h3 class="heading">1</h3>
-          <p class="text table__text_theme_dark">Выберите привлекательный проект.</p> 
+          <h3 class="table__heading table__heading_theme_dark">1</h3>
+          <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p> 
         </div>
         <div class="table__cell_theme_dark">
-          <h3 class="heading">2</h3>
-          <p class="text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <h3 class="table__heading table__heading_theme_dark">2</h3>
+          <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
         </div> 
         <div class="table__cell_theme_dark">
-          <h3 class="heading">3</h3>
-          <p class="text table__text_theme_dark">Определите целевой уровень мастерства.</p> 
+          <h3 class="table__heading table__heading_theme_dark">3</h3>
+          <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p> 
         </div>
         <div class="table__cell_theme_dark">
-          <h3 class="heading">4</h3>
-          <p class="text table__text_theme_dark">Разбейте навык на элементы.</p> 
+          <h3 class="table__heading table__heading_theme_dark">4</h3>
+          <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p> 
         </div>
         <div class="table__cell_theme_dark">  
-        <h3 class="heading">5</h3>
-          <p class="text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+        <h3 class="table__heading table__heading_theme_dark">5</h3>
+          <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
         </div> 
         <div class="table__cell_theme_dark">
-        <h3 class="heading">6</h3>
-          <p class="text table__text_theme_dark">Устраните препятствия для занятий.</p>
+        <h3 class="table__heading table__heading_theme_dark">6</h3>
+          <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
         </div> 
         <div class="table__cell_theme_dark">
-          <h3 class="heading">7</h3>
-          <p class="text table__text_theme_dark">Выделите специальное время для занятий.</p> 
+          <h3 class="table__heading table__heading_theme_dark">7</h3>
+          <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p> 
         </div> 
         <div class="table__cell_theme_dark">
-         <h3 class="heading">8</h3>
-          <p class="text table__text_theme_dark">Создайте быстрые петли обратной связи.</p> 
+         <h3 class="table__heading table__heading_theme_dark">8</h3>
+          <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p> 
         </div>
         <div class="table__cell_theme_dark">
-          <h3 class="heading">9</h3>
-          <p class="text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p> 
+          <h3 class="table__heading table__heading_theme_dark">9</h3>
+          <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p> 
         </div>
         <div class="table__cell_theme_dark">
-          <h3 class="heading">10</h3>
-          <p class="text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p> 
+          <h3 class="table__heading table__heading_theme_dark">10</h3>
+          <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p> 
         </div> 
         </div>
         <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
     </main>
+
     <footer class="footer">
-<div class="columns">
-  <div class="column_content_copyright">
-    <img src="./images/logo_place_header.svg" alt="Логотип" class="logo_place_footer">
+<div class="footer__columns">
+  <div class="footer__column_content_copyright">
+    <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
+    <p class="footer__author">&#169; 2020. Юлия Маркова</p>
   </div>
-</div>
+  <div class="footer__column_content_info">
+    <h3 class="footer__column-heading">О Практикуме</h3>
+    <div class="footer__column-links"> 
+    <a href="#" class="footer__column-link">Главная</a>
+    <a href="#" class="footer__column-link">Концепция</a>
+    <a href="#" class="footer__column-link">Наставники</a>
+    </div>
+  </div>
+  <div class="footer__column_content_social">
+    <h3 class="footer__column-heading">Соцсети</h3> 
+    <div class="footer__column-links">    
+    <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
+    <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK" class="footer__social-icon">ВКонтакте</a>
+    <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Inst" class="footer__social-icon">Instagram</a>
+    </div>
+  </div>   
+  </div> 
     </footer>
 </body>
 </html>
