--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
       <p class="section-subtitle">Про учёбу и мозг</p>
-      <ul class="table list">
-        <li class="table__cell">
+      <div class="table">
+        <div class="table__cell">
           <h3 class="table__heading">86 миллиардов</h3>
           <p class="table__text">Число нейронов в мозге человека</p>
-        </li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">2.1 миллиарда</h3>
           <p class="table__text">Число нуждающихся в повышении квалификации</p>
           <p class="table__text">Всемирный Банк, 2017</p>
-        <li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">1000 терабайт</h3>
           <p class="table__text">Объём памяти человека</p>
-        </li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">500 триллионов</h3>
           <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека
           </p>
-        </li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">420 миллионов</h3>
           <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
           <p class="table__text">Всемирный Банк, 2017</p>
-        </li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">17–20 лет</h3>
           <p class="table__text">Пик обучаемости</p>
-        </li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">1885 год</h3>
           <p class="table__text">Открытие кривой забывания</p>
-        </li>
-        <li class="table__cell">
+        </div>
+        <div class="table__cell">
           <h3 class="table__heading">1889 год</h3>
           <p class="table__text">Открытие условного рефлекса</p>
-      </ul>
+        </div>
       </div>
     </section>
 
@@ -87,49 +87,49 @@
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-      <ul class="table table_theme_dark list">
-        <li class="table__cell table__cell_theme_dark">
+      <div class="table table_theme_dark">
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">1</h3>
           <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">2</h3>
           <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">3</h3>
           <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">4</h3>
           <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">5</h3>
           <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">6</h3>
           <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">7</h3>
           <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">8</h3>
           <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">9</h3>
           <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
           </p>
-        </li>
-        <li class="table__cell table__cell_theme_dark">
+        </div>
+        <div class="table__cell table__cell_theme_dark">
           <h3 class="table__heading table__heading_theme_dark">10</h3>
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-        </li>
-      </ul>
+        </div>
+      </div>
       <div class="kaufman__triangle"></div>
     </section>
   </main>
@@ -143,22 +143,22 @@
       <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links list">
-          <a href="#" class="footer__column-link">Главная</a>
-          <a href="#" class="footer__column-link">Концепция</a>
-          <a href="#" class="footer__column-link">Наставники</a>
+          <li><a href="#" class="footer__column-link">Главная</a></li>
+          <li><a href="#" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" class="footer__column-link">Наставники</a></li>
         </ul>
       </nav>
-      <div class="footer__column footer__column_content_social">
+      <nav class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
-        <div class="footer__column-links list">
-          <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
-              class="footer__social-icon">Facebook</a>
-          <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK"
-              class="footer__social-icon">ВКонтакте</a>
-          <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Inst"
-              class="footer__social-icon">Instagram</a>
-        </div>
-      </div>
+        <ul class="footer__column-links list">
+          <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
+                class="footer__social-icon">Facebook</a></li>
+          <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK"
+                class="footer__social-icon">ВКонтакте</a></li>
+          <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Inst"
+                class="footer__social-icon">Instagram</a></li>
+        </ul>
+      </nav>
     </div>
   </footer>
 </body>
