--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
         </div>
       </article>
     </section>
-    </section>
 
     <section class="feynman">
       <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
@@ -105,8 +104,6 @@
       <p class="feynman__subtitle">Выучить и не забыть.</p>
       <a href="#" class="feynman__link">Подробнее &#8594;</a>
     </section>
-
-
 
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
@@ -229,7 +226,7 @@
             alt="strelka-logo"></a>
         <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo"
             alt="polka-logo"></a>
-        </dev>
+        </div>
     </section>
   </main>
 
