--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
       жизни?
-      <a href="#" class="header__link"> Узнать &#8594;</a></p>
+      <a href="#" target="_blank" class="header__link"> Узнать &#8594;</a></p>
   </header>
 
   <main class="content">
@@ -86,7 +86,7 @@
     </section>
 
     <section class="oakley">
-      <article class="two-columns two-columns__items">
+      <article class="oakley__two-columns two-columns">
         <h2 class="two-columns__brief">История Барбары Оакли.</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
@@ -102,7 +102,7 @@
       <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a href="#" class="feynman__link">Подробнее &#8594;</a>
+      <a href="#" target="_blank" class="feynman__link">Подробнее &#8594;</a>
     </section>
 
     <section class="digits">
@@ -160,7 +160,7 @@
           <div class="khan__book-pic">
             <img src="./images/khan-book.jpg" alt="World" class="khan__book-pic-ill">
           </div>
-          <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+          <a href="#" target="_blank" class="khan__buy-link">Купить книгу &#8594;</a>
         </div>
       </article>
     </section>
@@ -218,13 +218,13 @@
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
-        <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" class="resources__logo"
+        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-arzamas.svg" class="resources__logo"
             alt="arzamas-logo"></a>
-        <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" class="resources__logo"
+        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-n1.svg" class="resources__logo"
             alt="n1-logo"></a>
-        <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo"
+        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo"
             alt="strelka-logo"></a>
-        <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo"
+        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo"
             alt="polka-logo"></a>
         </div>
     </section>
@@ -239,19 +239,19 @@
       <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a href="#" class="footer__column-link">Главная</a></li>
-          <li><a href="#" class="footer__column-link">Концепция</a></li>
-          <li><a href="#" class="footer__column-link">Наставники</a></li>
+          <li><a href="#" target="_blank" class="footer__column-link">Главная</a></li>
+          <li><a href="#" target="_blank" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" target="_blank" class="footer__column-link">Наставники</a></li>
         </ul>
       </nav>
       <nav class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
-          <li><a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
+          <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
                 class="footer__social-icon">Facebook</a></li>
-          <li><a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK"
+          <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK"
                 class="footer__social-icon">ВКонтакте</a></li>
-          <li><a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Inst"
+          <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Inst"
                 class="footer__social-icon">Instagram</a></li>
         </ul>
       </nav>
