--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <header class="header">
     <img src="./images/header-image.png" alt="Картинка" class="header__main-illustration">
     <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
-    <div class="header__square-pic"></div>
+    <div class="header__square-pic rotation"></div>
     <h1 class="header__title">Научиться учиться</h1>
     <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
       жизни?
-      <a href="#" target="_blank" class="header__link"> Узнать &#8594;</a></p>
+      <a href="#" target="_blank" rel="noopener" class="header__link"> Узнать &rarr;</a>
+    </p>
   </header>
 
   <main class="content">
@@ -40,29 +41,29 @@
       <p class="section-subtitle">Пять практик от Барбары Оакли</p>
       <div class="cards">
         <div class="cards__item">
-          <img src="./images/cards-attention.png" alt="attention" class="cards__image">
+          <img src="./images/cards-attention.png" alt="Два вида внимания" class="cards__image">
           <h3 class="cards__title">Два вида внимания</h3>
           <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
             мышление.</p>
         </div>
         <div class="cards__item">
-          <img src="./images/cards-recall.png" alt="recall" class="cards__image">
+          <img src="./images/cards-recall.png" alt="Вспомнить всё" class="cards__image">
           <h3 class="cards__title">Recall</h3>
           <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
         </div>
         <div class="cards__item">
-          <img src="./images/cards-interliving.png" alt="interliving" class="cards__image">
+          <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
           <h3 class="cards__title">Интерливинг</h3>
           <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
         </div>
         <div class="cards__item">
-          <img src="./images/cards-question.png" alt="question" class="cards__image">
+          <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
           <h3 class="cards__title">Вопросы</h3>
           <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
             волнует.</p>
         </div>
         <div class="cards__item">
-          <img src="./images/cards-competence.png" alt="competence" class="cards__image">
+          <img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
           <h3 class="cards__title">Иллюзия компетентности</h3>
           <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
             владеете новой темой.</p>
@@ -74,12 +75,10 @@
       <h2 class="section-title">Видео нa TED</h2>
       <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <div class="video__iframes">
-        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-          frameborder="0"
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-        <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-          frameborder="0"
+        <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
@@ -102,7 +101,7 @@
       <img src="./images/feynman.png" alt="Фейнман" class="feynman__image">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a href="#" target="_blank" class="feynman__link">Подробнее &#8594;</a>
+      <a href="#" target="_blank" rel="noopener" class="feynman__link">Подробнее &rarr;</a>
     </section>
 
     <section class="digits">
@@ -149,18 +148,16 @@
 
     <section class="khan">
       <article class="khan__container">
-        <h2 class="khan__author">Салман Хан</h2>
+        <p class="khan__author">Салман Хан</p>
         <h3 class="khan__title">Весь мир — школа</h3>
         <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
           миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут
           получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-        <h4 class="khan__quote-author">Джордж Лукас</h4>
+        <p class="khan__quote-author">Джордж Лукас</p>
         <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
-          <div class="khan__book-pic">
-            <img src="./images/khan-book.jpg" alt="World" class="khan__book-pic-ill">
-          </div>
-          <a href="#" target="_blank" class="khan__buy-link">Купить книгу &#8594;</a>
+          <img src="./images/khan-book.jpg" alt="Мир" class="khan__book-pic">
+          <a href="#" target="_blank" rel="noopener" class="khan__buy-link">Купить книгу &rarr;</a>
         </div>
       </article>
     </section>
@@ -211,22 +208,22 @@
           <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
         </div>
       </div>
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
     </section>
 
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
       <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <div class="resources__logo-zone">
-        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-arzamas.svg" class="resources__logo"
-            alt="arzamas-logo"></a>
-        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-n1.svg" class="resources__logo"
-            alt="n1-logo"></a>
-        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-strelka.svg" class="resources__logo"
-            alt="strelka-logo"></a>
-        <a href="#" target="_blank" class="resources__link"><img src="./images/logo/resources-polka.svg" class="resources__logo"
-            alt="polka-logo"></a>
-        </div>
+        <a href="#" target="_blank" rel="noopener" class="resources__link"><img
+            src="./images/logo/resources-arzamas.svg" class="resources__logo" alt="arzamas-logo"></a>
+        <a href="#" target="_blank" rel="noopener" class="resources__link"><img src="./images/logo/resources-n1.svg"
+            class="resources__logo" alt="n1-logo"></a>
+        <a href="#" target="_blank" rel="noopener" class="resources__link"><img
+            src="./images/logo/resources-strelka.svg" class="resources__logo" alt="strelka-logo"></a>
+        <a href="#" target="_blank" rel="noopener" class="resources__link"><img src="./images/logo/resources-polka.svg"
+            class="resources__logo" alt="polka-logo"></a>
+      </div>
     </section>
   </main>
 
@@ -234,25 +231,25 @@
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <img src="./images/logo_place_footer.svg" alt="Логотип" class="logo logo_place_footer">
-        <p class="footer__author">&#169; 2020. Юлия Маркова</p>
+        <p class="footer__author">&copy; 2020. Юлия Маркова</p>
       </div>
       <nav class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <ul class="footer__column-links">
-          <li><a href="#" target="_blank" class="footer__column-link">Главная</a></li>
-          <li><a href="#" target="_blank" class="footer__column-link">Концепция</a></li>
-          <li><a href="#" target="_blank" class="footer__column-link">Наставники</a></li>
+          <li><a href="#" target="_blank" rel="noopener" class="footer__column-link">Главная</a></li>
+          <li><a href="#" target="_blank" rel="noopener" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" target="_blank" rel="noopener" class="footer__column-link">Наставники</a></li>
         </ul>
       </nav>
       <nav class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <ul class="footer__column-links">
-          <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook"
-                class="footer__social-icon">Facebook</a></li>
-          <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="VK"
-                class="footer__social-icon">ВКонтакте</a></li>
-          <li><a href="#" target="_blank" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Inst"
-                class="footer__social-icon">Instagram</a></li>
+          <li><a href="#" target="_blank" rel="noopener" class="footer__column-link"><img
+                src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a></li>
+          <li><a href="#" target="_blank" rel="noopener" class="footer__column-link"><img
+                src="./images/vk_color_white.svg" alt="ВК" class="footer__social-icon">ВКонтакте</a></li>
+          <li><a href="#" target="_blank" rel="noopener" class="footer__column-link"><img
+                src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a></li>
         </ul>
       </nav>
     </div>
